# print-imposition

./: .gitignore  LICENSE  README.md  pyproject.toml
src/imposition/: __init__.py  boxes.py  cli.py  layout.py  optimizer.py  output.py  paper.py
tests/: test_boxes.py  test_layout.py
